# ReapAir

./: .gitignore  Makefile  README.md  Sätze_de.txt  css.css  example.html  index.html  pyproject.toml  randomSentences.py  template.html
html_rendering/: README.md  css.css
reapair/: __init__.py  helpers.py  reapair.py  settings.py
reapair/assets/: sentences-de_DE.json  template.j2.html
reapair/assets/images/: README.md
static_html_content/: css.css  example.html
static_html_content/assets/: css.css
static_html_content/images/: README.md
